src/styles/product-page.scss
@use './_mixins';

.produkt-info > * {
  max-width: 1200px;
  margin: auto;
  padding: 0 var(--a-spacing-6);
}

.produkt-info:last-child {
  margin-bottom: var(--a-spacing-20);
}

.produkt-info {
  &__tabs {
    margin-top: var(--a-spacing-10);
    margin-bottom: var(--a-spacing-10);
  }

  &__supplier-info {
    margin-top: var(--a-spacing-8);

    .navds-heading {
      margin-bottom: var(--a-spacing-2);
    }
    p {
      margin-top: 0.2rem;
      margin-bottom: 0.2rem;
    }
  }

  &__agreement-info {
    margin-top: var(--a-spacing-10);

    display: flex;
    justify-content: center;
    .navds-guide-panel {
      max-width: 800px;
    }
    p {
      margin: 0px;
    }
  }

  &__rank {
    height: 30px;
    width: 30px;
    display: flex;
    align-items: center;
    justify-content: center;
    font-weight: 600;
    background-color: var(--a-green-200);
    border-radius: 12px;
    margin-left: -11px;
  }

  width: 100%;

  &__top {
    display: flex;
    flex-direction: column;
    position: relative;
    padding: var(--a-spacing-10) var(--a-spacing-6);

    @include mixins.for-size(tablet-up) {
      flex-direction: row;
    }
  }

  &__top::before,
  &__top::after {
    bottom: 0;
    content: '';
    position: absolute;
    top: 0;
    width: 100vw;
  }

  &__top::before {
    right: 100%;
  }

  &__top::after {
    left: 100%;
  }

  &__top,
  &__top::after,
  &__top::before {
    background-color: var(--a-gray-50);
  }

  &__top-right {
    @include mixins.for-size(tablet-up) {
      padding: var(--a-spacing-5) var(--a-spacing-5);
      margin-left: var(--a-spacing-8);
      border-left: 1px solid var(--a-gray-300);
    }
  }

  .similar-products {
    display: flex;
    flex-direction: column;
    margin-top: var(--a-spacing-10);
    padding-top: var(--a-spacing-10);

    .navds-heading {
      margin-bottom: var(--a-spacing-6);
    }

    &__slider {
      display: flex;
      flex-direction: row;
      align-items: center;
      margin-bottom: var(--a-spacing-10);

      .arrow {
        padding: 8px;
        margin: 0 var(--a-spacing-2);
      }
    }

    &__cards {
      display: flex;
      flex-direction: row;
      gap: var(--a-spacing-5);
    }

    &__card {
      border: 1.5px solid var(--ac-panel-border, var(--a-border-default));
      border-radius: var(--a-border-radius-medium);
      padding: var(--a-spacing-3);
      width: 200px;
      min-height: 200px;
    }
  }
}

.photo-slider {
  .arrow {
    cursor: pointer;
    padding: 0;
    margin: 0 var(--a-spacing-2);
    border-radius: 50px;
  }

  .arrow:hover {
    border-radius: 50px;
  }

  .photo-and-arrow-container {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
  }

  .photo-container {
    position: relative;
    overflow: hidden;
    width: 400px;
    height: 300px;
    margin: var(--a-spacing-3);

    .div-motion {
      position: absolute;
    }

    .next-image {
      position: relative;
      width: 400px;
      height: 300px;
    }
  }

  .dots {
    width: 100%;
    display: flex;
    justify-content: center;
    padding: 20px 0;
  }

  .dot {
    padding: 0;
    width: 15px;
    height: 15px;
    background-color: var(--a-deepblue-100);
    border-radius: 50%;
    margin: 0 10px;
  }

  .dot:hover {
    cursor: pointer;
    background-color: var(--a-deepblue-200);
  }

  .activeDot {
    width: 15px;
    height: 15px;
    background-color: var(--a-deepblue-200);
    border-radius: 50%;
    margin: 0 10px;
  }

  .activeDot:hover {
    cursor: unset;
  }
}

